--- a/src/main/resources/templates/competition.html
+++ b/src/main/resources/templates/competition.html
@@ -8,15 +8,16 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/extjs/6.2.0/ext-all-debug.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/extjs/6.2.0/classic/theme-neptune/theme-neptune.js"></script>
     <script type="text/javascript">
+        var compId = "[[${competitionId}]]";
         Ext.onReady(function(){
-            var compId = Ext.urlDecode(window.location.search.substring(0)).compId;
-            var comp = {};
+            //var cid = JSON.parse(compId);
+            //var compId = Ext.urlDecode(window.location.search.substring(0)).compId;
             Ext.Ajax.request({
                 url: '/competition/' + compId,
                 method: 'GET',
                 dataType: 'json',
                 success: function (data, status) {
-                    comp = Ext.util.JSON.decode(data.responseText);
+                    var comp = Ext.util.JSON.decode(data.responseText);
                     console.log(comp);
                     init(comp);
                     alert("Success");
