--- a/src/main/resources/templates/competitions.html
+++ b/src/main/resources/templates/competitions.html
@@ -9,41 +9,105 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/extjs/6.2.0/classic/theme-neptune/theme-neptune.js"></script>
     <script type="text/javascript">
         Ext.onReady(function(){
-            Ext.define('model.Competition', {
-                extend: 'Ext.data.Model',
-                fields: ['id', 'name']
-            });
 
-            Ext.define('store.Competition', {
-                extend: 'Ext.data.Store',
-                model: 'model.Competition',
-                proxy: {
-                    type: 'ajax',
-                    url: 'competition/all'
+            var store = Ext.create('Ext.data.Store', {
+                fields : ['name', 'type'],
+                proxy  : {
+                    type   : 'memory',
+                    reader : {
+                        type : 'json',
+                        rootProperty : 'items'
+                    }
                 }
             });
 
-            var competitions = Ext.create('store.Competition');
+            Ext.define('MyApp.view.MyGridPanel', {
+                extend: 'Ext.grid.Panel',
+                alias: 'widget.mygridpanel',
+                height: 315,
+                width: 784,
+                title: 'Competitions',
+                store: store,
 
-            console.log(competitions);
-
-            Ext.create('Ext.grid.Panel', {
-                renderTo: Ext.getBody(),
-                width: '1000px',
-                title: 'Competition',
-                store: competitions,
-                xxplugins: [{
-                    ptype: 'viewport'
+                columns: [  {
+                    text: 'Name',
+                    width: 100,
+                    sortable: false,
+                    hideable: false,
+                    dataIndex: 'name'
+                }, {
+                    text: 'Type',
+                    width: 100,
+                    sortable: false,
+                    hideable: false,
+                    dataIndex: 'type'
                 }],
-                columns: [{
-                        text: 'ID',
-                        dataIndex: 'id'
-                    },
-                    {
-                        text: 'Name',
-                        dataIndex: 'name'
-                    }]
+                plugins: [{
+                    ptype: 'cellediting',
+                    autoCancel: false,
+                    clicksToEdit: 1
+                }],
+                viewConfig : {
+                    listeners : {
+                        itemdblclick : function(view, cell, cellIndex, record, row, rowIndex, e) {
+                            console.log(cell);
+                            window.location.assign("/competition/byId/"+cell.data.id);
+                        }
+                    }
+                }
             });
+
+            var grid = Ext.create('MyApp.view.MyGridPanel', {
+                renderTo: Ext.getBody()
+            });
+
+            var label = Ext.create('Ext.form.Label',{
+                text: 'Competition name:'
+            });
+
+            var searchField = Ext.create('Ext.form.TextField',{
+                text: ''
+            });
+
+            var searchButton = Ext.create('Ext.button.Button', {
+                text: 'Search',
+                handler: function() {
+                    searchCompetitions();
+                }
+            });
+
+            Ext.create('Ext.panel.Panel', {
+                renderTo: Ext.getBody(),
+                width: 1000,
+                height:500,
+                layout: 'border',
+                items: [
+                    label,
+                    searchField,
+                    searchButton,
+                    grid
+                ]
+            });
+
+            var searchCompetitions = function(){
+                Ext.Ajax.request({
+                    url: 'competition/byname/' + searchField.getValue(),
+                    method: 'GET',
+                    success: function (form, action) {
+                        var competitions = Ext.JSON.decode(form.responseText);
+                        console.log(competitions);
+                        store.removeAll();
+                        for(var i = 0; i<competitions.length; i++){
+                            store.add({id: competitions[i].compId, name : competitions[i].name, type: competitions[i].type});
+                        }
+                    },
+                    failure: function (form, action) {
+                        alert(form.responseText);
+                    }
+                });
+            };
+
+            searchCompetitions();
         });
     </script>
 </head>
