--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
     <meta charset="utf-8"/>
-    <title>FA - Bejelentkező felület</title>
+    <title>Login</title>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/extjs/6.2.0/classic/theme-neptune/resources/theme-neptune-all.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/extjs/6.2.0/ext-all-debug.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/extjs/6.2.0/classic/theme-neptune/theme-neptune.js"></script>
     <script type="text/javascript">
         Ext.onReady(function () {
-            var field, panel;
-
             var loginpanel = Ext.create('Ext.form.Panel', {
                 region: 'center',
                 title: 'Bejelentkező panel',
@@ -21,30 +18,33 @@
                 url: '/login',
                 items: [{
                     xtype: 'textfield',
-                    fieldLabel: 'Felhasználó név',
+                    fieldLabel: 'Username',
                     name: 'username'
                 },
                     {
                         xtype: 'textfield',
                         inputType: 'password',
-                        fieldLabel: 'Jelszó',
+                        fieldLabel: 'Password',
                         name: 'password'
                     }],
                 buttons: [
-                    { text: "Login",
+                    {
+                        text: "Login",
                         handler: function() {
                             var form = this.up('form').getForm();
                             form.submit({
                                 success: function(form, action) {
-                                    Ext.Msg.alert('Success', action.result.msg);
+                                    alert('Success', action.result.msg);
                                 },
                                 failure: function(form, action) {
-                                    Ext.Msg.alert('Failed', action.result.msg);
+                                    console.log(form.responseText);
+                                    alert('Failed', action.result.msg);
                                 }
                             })
                         }
                     },
-                    { text: "Reset",
+                    {
+                        text: "Reset",
                         handler: function() { this.up('form').getForm().reset(); }
                     }
                 ]
@@ -59,15 +59,7 @@
                         layout: {
                             type:'vbox',
                             pack:'center'
-                        },
-                        items: [{
-                            xtype: 'image',
-                            src: 'images/ursula.png',
-                            shrinkWrap: true,
-                            alt: 'Nővérke',
-                            width:140,
-                            height:400
-                        }]
+                        }
                     },
                     loginpanel,
                     { region:'east', width: 140}
