--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -55,14 +55,15 @@
                 height:500,
                 layout: 'border',
                 items: [
-                    { region:'west', width: 140,
+                    {
+                        region:'west', width: 140,
                         layout: {
                             type:'vbox',
                             pack:'center'
                         }
                     },
                     loginpanel,
-                    { region:'east', width: 140}
+                    { region:'east', width: 140 }
                 ]
             }).center();
         });
