--- a/src/main/resources/templates/competitions.html
+++ b/src/main/resources/templates/competitions.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Competitions</title>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/extjs/6.2.0/classic/theme-neptune/resources/theme-neptune-all.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/extjs/6.2.0/ext-all-debug.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/extjs/6.2.0/classic/theme-neptune/theme-neptune.js"></script>
     <script type="text/javascript">
@@ -95,7 +96,6 @@
                     method: 'GET',
                     success: function (form, action) {
                         var competitions = Ext.JSON.decode(form.responseText);
-                        console.log(competitions);
                         store.removeAll();
                         for(var i = 0; i<competitions.length; i++){
                             store.add({id: competitions[i].compId, name : competitions[i].name, type: competitions[i].type});
