--- a/src/main/resources/templates/teams.html
+++ b/src/main/resources/templates/teams.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Teams</title>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/extjs/6.2.0/classic/theme-neptune/resources/theme-neptune-all.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/extjs/6.2.0/ext-all-debug.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/extjs/6.2.0/classic/theme-neptune/theme-neptune.js"></script>
     <script type="text/javascript">
@@ -88,7 +89,6 @@
                     method: 'GET',
                     success: function (form, action) {
                         var teams = Ext.JSON.decode(form.responseText);
-                        console.log(teams);
                         store.removeAll();
                         for(var i = 0; i<teams.length; i++){
                             store.add({id: teams[i].teamId, name : teams[i].name});
